src/style.css
body {
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	line-height: 1.6;
	margin: 0 auto;
	max-width: 800px;
	min-height: calc(100vh - 2rem);
	padding: 0.75rem;

	font-family: "Source Sans 3", sans-serif;
	font-optical-sizing: auto;
	font-weight: 350;
	font-style: normal;
	font-size: 100%;
}

main {
	flex: 1;
}


header {
	margin-top: 2rem;
}

h1 {
	margin-top: 0;
}

footer {
	margin-top: 2rem;
}

pre {
	overflow-x: auto;
}

nav > ul {
	list-style: none;
	padding: 0;
}
nav > ul > li {
	display: inline-block;
	margin-right: 1rem;
}

.index-block {
	padding-top: 0.5rem;
}

#post-list div {
	margin-bottom: 0.3em;
}
#post-list dt {
	margin: 0;
}

#post-list dd {
	margin-top: 0.5em;
}

#date-created, #date-updated {
	color: #808080;
	opacity: 0.7;
	font-weight: 600;
}

